--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Care_Portal</string>
+    <string name="app_name">News</string>
+    <string name="article1">article1</string>
+    <string name="article2">article2</string>
+    <string name="article3">article3</string>
+    <string name="true_button">True</string>
+
 </resources>
